--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.14.0",
     "lodash": "^4.15.0",
     "loggin": "^3.0.1",
+    "morgan": "^1.7.0",
     "socket.io": "^1.4.8"
   }
 }
