--- a/package.json
+++ b/package.json
@@ -26,13 +26,22 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
+    "bluebird": "^3.4.6",
+    "es6-promise": "^3.2.1",
+    "events": "^1.1.1",
     "express": "^4.14.0",
+    "flux": "^2.1.1",
+    "keymirror": "^0.1.1",
     "lodash": "^4.15.0",
     "loggin": "^3.0.1",
+    "mongodb": "^2.2.9",
     "morgan": "^1.7.0",
+    "object-assign": "^4.1.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "socket.io": "^1.4.8"
+    "react-router": "^2.7.0",
+    "socket.io": "^1.4.8",
+    "socket.io-client": "^1.4.8"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.1",
