--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": ">= 4.0"
+    "node": "4.4.x",
+    "npm": "2.15.x",
   },
   "repository": {
     "type": "git",
