--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "engines": {
     "node": "4.4.x",
-    "npm": "2.15.x",
+    "npm": "2.15.x"
   },
   "repository": {
     "type": "git",
